<resources>
    <string name="api_url">http://example.com/</string>
    <string name="app_name">Dental Hub</string>
    <string name="submit">Submit</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="add_patient">Add Patient</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="error_http_500">Server could not handle your request.</string>
    <string name="error_http_404">Remote resource not found.</string>
    <string name="error_http_400">Server could not handle your request.</string>
    <string name="password_is_required">Password is required.</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name.</string>
    <string name="enter_middle_name">Enter middle name.</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="age">Age</string>
    <string name="educationLevel">Education level</string>
    <string name="add_new_encounter">Add New Encounter</string>

    <string name="save_patient">Save Patient</string>
    <string name="phone">Phone</string>
    <string name="blood_disorder_or_bleeding_problem">Blood disorder or bleeding problem</string>
    <string name="allergies">Allergies</string>
    <string name="medications">Medications</string>
    <string name="other">Other</string>
    <string name="diabetes">Diabetes</string>
    <string name="liver_problem">Liver problem</string>
    <string name="rheumatic_fever">Rheumatic fever</string>
    <string name="seizures_or_epilepsy">Seizures or epilepsy</string>
    <string name="hepatitis_b_or_c">Hepatitis B or C</string>
    <string name="hiv">HIV</string>
    <string name="no_underlying_medical_condition">No underlying medical condition</string>
    <string name="not_taking_any_medications">Not taking any medications</string>
    <string name="no_referral">No referral</string>
    <string name="health_post">Health Post</string>
    <string name="hygienist">Hygienist</string>
    <string name="dentist">Dentist</string>
    <string name="general_physician">General Physician</string>
    <string name="fv_applied">FV Applied</string>
    <string name="treatment_plan_complete">Treatment plan complete</string>
    <string name="notes">Notes</string>
    <string name="cavity_permanent_molar">Cavity Permanent Molar or Premolar</string>
    <string name="cavity_permanent_anterior">Cavity Permanent Canine or Incisor</string>
    <string name="need_art_filling">Need ART Filling</string>
    <string name="need_sealant">Need Sealant</string>
    <string name="need_sdf">Need SDF</string>
    <string name="need_extraction">Need Extraction</string>
    <string name="carries_risk">Carries Risk</string>
    <string name="decayed_primary_teeth">No. of Decayed Primary Teeth</string>
    <string name="decayed_permanent_teeth">No. of Decayed Permanent Teeth</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="ward">Ward</string>
    <string name="delay">Delay</string>
    <string name="select_location">Select location</string>
    <string name="select_activity">Select activity</string>
    <string name="go">Go</string>
    <string name="address">Address</string>
    <string name="first_name_is_required">First Name is required.</string>
    <string name="last_name_is_required">Last name is required.</string>
    <string name="phone_is_required">Phone is required.</string>
    <string name="valid_date_is_required">Valid date (format yyyy-MM-dd) is required.</string>
    <string name="call">Call</string>
    <string name="other_problem">Other Problem</string>
    <string name="checkup_screening">Checkup / Screening</string>
    <string name="relief_of_pain">Relief of pain</string>
    <string name="continuation_of_treatment_plan">Continuation of treatment plan</string>
    <string name="primary_reason_for_encounter">Primary reason for encounter</string>
    <string name="history">History</string>
    <string name="screening">Screening</string>
    <string name="treatment">Treatment</string>
    <string name="referral">Referral</string>
    <string name="sync_ticker">Syncing</string>
    <string name="synchronization">Synchronization</string>
    <string name="recall">Recall</string>
    <string name="recall_date">Recall Date</string>
    <string name="recall_time">Recall Time</string>
    <string name="recall_geography">Recall Geography</string>
    <string name="recall_activity">Recall Activity</string>
    <string name="add_new_patient">Add new patient</string>
    <string name="valid_phone_number_is_required">Valid phone number is required.</string>
    <string name="no_allergies">No Allergies</string>
    <string name="edit">Edit</string>
    <string name="view_patient_info">View Patient Info</string>
    <string name="patient_list">Patient List</string>
    <string name="details">Details</string>
    <string name="first_name_">First Name :</string>
    <string name="middle_name_">Middle Name :</string>
    <string name="last_name_">Last Name :</string>
    <string name="gender_">Gender :</string>
    <string name="education_level_">Education Level :</string>
    <string name="ward_">Ward :</string>
    <string name="phone_">Phone :</string>
    <string name="date_of_birth_">Date of birth :</string>
    <string name="school_seminar">School Seminar</string>
    <string name="community_outreach">Community Outreach</string>
    <string name="other_details">Other details</string>
    <string name="training">Training</string>
    <string name="municipality">Municipality</string>
    <string name="district">District</string>
    <string name="municipality_">Municipality :</string>
    <string name="district_">District :</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search</string>
    <string name="username_is_required">Username is required.</string>
    <string name="prompt_username">Username</string>
    <string name="sdf_whole_mouth">SDF Whole Mouth</string>
    <string name="pain_due_to_reversible_pulpitis">Pain due to Reversible Pulpitis</string>
    <string name="active_infection">Active Infection</string>
    <string name="username_password_dont_matched">Please enter correct username/password.</string>
    <string name="dashboard">Dashboard</string>
    <string name="date_of_birth_with_format">Date of birth</string>

    <string name="one_week">1 week</string>
    <string name="one_month">1 month</string>
    <string name="six_months">6 months</string>
    <string name="one_year">1 year</string>
    <string name="high_bp">High BP</string>
    <string name="low_bp">Low BP</string>
    <string name="thyroid_disorder">Thyroid Disorder</string>
    <string name="low_bp_is_checked">Low BP is already checked.</string>
    <string name="high_bp_is_checked">High BP is already checked.</string>
    <string name="failure_message">Can\'t reach to Dental Hub server at the moment. Please check your connection and try in a while.</string>
    <string name="could_not_load_activity">Activities could not be loaded.</string>
    <string name="could_not_load_locations">Locations could not be loaded.</string>
    <string name="syncing">Syncing ...</string>
    <string name="downloading_encounters">Downloading encounters ...</string>
    <string name="downloading_history">Downloading history ...</string>
    <string name="downloading_screening">Downloading screening ...</string>
    <string name="downloading_treatment">Downloading treatment ...</string>
    <string name="downloading_referral">Downloading referral ...</string>
    <string name="uploading_patient">Uploading patient ...</string>
    <string name="downloading_patient_detail">Downloading patient detail ...</string>
    <string name="already_exists">Resource already exists.</string>
    <string name="uploading_history">Uploading history ...</string>
    <string name="uploading_referral">Uploading referral ...</string>
    <string name="uploading_screening">Uploading screening ...</string>
    <string name="uploading_treatment">Uploading treatment ...</string>
    <string name="activity">Activity</string>
    <string name="geography">Geography</string>
    <string name="telephony_serivce_unavailable">Telephony service not available on this device.</string>
    <string name="patient_name">Patient Name</string>
    <string name="encounter_type">Encounter type</string>
    <string name="flag_type">Flag type</string>
    <string name="flag_status">Flag Status</string>
    <string name="description_of_the_reason_to_flag_the_encounter">Description of the reason to flag the encounter.</string>
    <string name="request_submitted_successfully">Request Submitted Successfully</string>
    <string name="exit">exit</string>
    <string name="please_enter_your_password_for_verification">Please enter your password for verification.</string>
    <string name="delete">Delete</string>
    <string name="need_to_modify">Need to modify</string>
    <string name="modify">Modify</string>
    <string name="request_modify">Request Modify</string>
    <string name="flag">Flag</string>
</resources>
