<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/search"
            android:icon="@drawable/search"
            android:title="@string/search"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/menuFlag"
            android:icon="@android:drawable/ic_secure"
            android:title="@string/flag" />
    <item
            android:id="@+id/menuSync"
            android:icon="@android:drawable/ic_secure"
            android:title="@string/synchronization" />
    <item
            android:id="@+id/logout"
            android:icon="@android:drawable/ic_secure"
            android:title="@string/logout" />

</menu>