<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="400dp"
              android:layout_height="540dp"
              android:padding="16dp"
              android:background="@color/white"
              android:layout_gravity="center">
    <LinearLayout
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >
        <TextView
                android:layout_weight="0.1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <ImageButton
                android:id="@+id/btnCloseDialog"
                android:layout_weight="0.9"
                android:src="@android:drawable/ic_delete"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
    </LinearLayout>
    <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="@color/grey_300"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
    />
    <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_weight="0.65"
                android:text="@string/first_name_"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tvFirstNameView"
                android:layout_weight="0.35"
                android:textSize="18sp"
                android:text="@string/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_weight="0.65"
                android:textSize="18sp"
                android:text="@string/middle_name_"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_weight="0.35"
                android:textSize="18sp"
                android:id="@+id/tvMiddleNameView"
                android:text="@string/middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_weight="0.65"
                android:textSize="18sp"
                android:text="@string/last_name_"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tvLastNameView"
                android:layout_weight="0.35"
                android:textSize="18sp"
                android:text="@string/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_weight="0.65"
                android:textSize="18sp"
                android:text="@string/gender_"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tvGenderpopupView"
                android:layout_weight="0.35"
                android:textSize="18sp"
                android:text="@string/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_weight="0.65"
                android:textSize="18sp"
                android:text="@string/date_of_birth_"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tvDateofBirthView"
                android:layout_weight="0.35"
                android:textSize="18sp"
                android:text="@string/date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_weight="0.65"
                android:textSize="18sp"
                android:text="@string/phone_"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tvPhonepopupView"
                android:layout_weight="0.35"
                android:textSize="18sp"
                android:text="@string/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_weight="0.65"
                android:textSize="18sp"
                android:text="@string/district_"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tvDistrictView"
                android:layout_weight="0.35"
                android:textSize="18sp"
                android:text="@string/district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_weight="0.65"
                android:textSize="18sp"
                android:text="@string/municipality_"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tvMunicipalityView"
                android:layout_weight="0.35"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_weight="0.65"
                android:textSize="18sp"
                android:text="@string/ward_"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tvWardView"
                android:layout_weight="0.35"
                android:textSize="18sp"
                android:text="@string/ward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_weight="0.65"
                android:textSize="18sp"
                android:text="@string/education_level_"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tvEducationLevelView"
                android:layout_weight="0.35"
                android:textSize="18sp"
                android:text="@string/educationLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>