<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:padding="16dp"
        android:background="@color/white"
        android:layout_gravity="center">
    <LinearLayout
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <TextView
                android:layout_weight="0.1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/primary_reason_for_encounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        <ImageButton
                android:id="@+id/btnCloseDialog"
                android:layout_weight="0.9"
                android:src="@android:drawable/ic_delete"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
    </LinearLayout>
    <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="@color/grey_300"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />
    <RadioGroup
            android:id="@+id/rgAddEncounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RadioButton
                android:id="@+id/rbCheckupScreening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkup_screening"/>
        <RadioButton
                android:id="@+id/rbReliefOfPain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relief_of_pain"/>
        <RadioButton
                android:id="@+id/rbContinuationOfTreatmentPlan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continuation_of_treatment_plan"/>
        <RadioButton
                android:id="@+id/rbOtherProblem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_problem"/>
    </RadioGroup>
    <EditText
            android:id="@+id/etOtherProblemPopUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_font_size"
            android:hint="@string/other_problem"/>
    <Button
            android:id="@+id/btnAddEncounter"
            android:layout_marginTop="10dp"
            android:text="@string/add_new_encounter"
            android:background="@drawable/default_button_background"
            android:layout_gravity="center"
            android:paddingStart="42dp"
            android:paddingEnd="42dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>
