<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <TextView
                android:id="@+id/tvPatientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
                android:id="@+id/ibEdit"
                android:visibility="invisible"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/edit"
                android:scaleType="fitCenter"
                android:src="@drawable/edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tvEncounterType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/encounter_type"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPatientName" />

        <TextView
                android:id="@+id/tvFlagType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flag_type"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEncounterType" />

        <TextView
                android:id="@+id/tvFlagEncounterStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/flag_status"
                android:textAllCaps="true"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/tvFlagReasonDescription"
                app:layout_constraintStart_toEndOf="@+id/tvFlagType"
                app:layout_constraintTop_toBottomOf="@+id/tvEncounterType" />

        <TextView
                android:id="@+id/tvFlagReasonDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_of_the_reason_to_flag_the_encounter"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFlagType" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>