<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp">

    <ImageButton
            android:id="@+id/btnModifyCloseDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:padding="6dp"
            android:src="@android:drawable/ic_delete" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/modify"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <EditText
            android:id="@+id/etModifyMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/need_to_modify"
            android:lines="3"
            android:padding="10dp"
            android:textSize="24sp" />

    <Button
            android:id="@+id/btnRequestModify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/request_modify" />

</LinearLayout>